Fix issues - Spacing, Fonts, Capitalize, etc

--- a/app/assets/stylesheets/theme/_theme.css
+++ b/app/assets/stylesheets/theme/_theme.css
@@ -5523,5 +5523,5 @@ ul.m__breadcrumb li a:hover {
     z-index: 10;
     width: 100%;
     background: #fff;
-    padding: 30px 0 20px 0;
+    padding: 15px 0 10px 0;
 }
